<resources>
    <string name="app_name">My Calculator App</string>
    <string name="chatbot_title">Chatbot</string>
    <string name="chatbot_hint">Type your message...</string>
    <string name="chatbot_send">Send</string>
    <string name="math_tutor">Math Tutor</string>
    <string name="math_tutor_icon">Math Tutor Icon</string>
    <string name="close">Close</string>
    <string name="tutor_welcome">Perform a calculation to see the step-by-step explanation here!</string>
    <string name="thinking">Thinking</string>
    <string name="typing">Typing</string>
    <string name="scientific_calculator">Scientific Calculator</string>
</resources>